removing a style to fix a date picker bug on Firefox

--- a/site/themes/s2b_hugo_theme/static/css/main_fun_legacy.css
+++ b/site/themes/s2b_hugo_theme/static/css/main_fun_legacy.css
@@ -378,9 +378,6 @@ button.jump-to-date[aria-expanded="true"] .icon.expand {
 #load-later {
     background-color: red;
 }
-.loading-zone {
-    height: 600px;
-}
 
 .calendar-day {
     border-top: 1px solid gray;
